--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="video-popup-inner">
                     <i class="fas fa-times video-popup-close"></i>
                         <div class="iframe-box">
-                            <iframe id="player-1" src="https://www.youtube.com/embed/o1eY1MPcRQs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="player-1" src="" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                 </div>
             </div>
